Implement About Section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="about-content">
                 <h2 class="about-title">Est. 2025</h2>
                 <div class="about-text">
-                    <p>We're two girls—one with a love for branding and storytelling, the other with a talent for numbers and strategy who decided to put our passions together.</p>
+                    <p>We're two girls — one with a love for branding and storytelling, the other with a talent for numbers and strategy — who decided to put our passions together.</p>
                     
                     <p>At MTM (More Than Marketing), we believe every small business deserves to look big.</p>
                     
