Implement MV Section

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <!-- Mission & Vision Section -->
     <section class="mission-vision-section">
         <div class="mv-images">
-            <img src="assets/images/mission-laptop.jpg" alt="MTM Website on laptop" class="mv-image">
-            <img src="assets/images/vision-phone.jpg" alt="MTM Instagram on phone" class="mv-image">
+            <img src="assets/images/mission-laptop.png" alt="MTM Website on laptop" class="mv-image">
+            <img src="assets/images/vision-phone.png" alt="MTM Instagram on phone" class="mv-image">
         </div>
         
         <div class="mv-content">
