Add Services Images

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="services-grid">
             <!-- Marketing -->
             <div class="service-card">
-                <img src="assets/images/marketing.jpg" alt="Marketing workspace" class="service-image">
+                <img src="assets/images/marketing.png" alt="Marketing workspace" class="service-image">
                 <div class="service-content">
                     <h3 class="service-title">Marketing</h3>
                     <p class="service-description">Tailored marketing strategies and growth plans.</p>
@@ -98,7 +98,7 @@
                     <h3 class="service-title">Content creation</h3>
                     <p class="service-description">Engaging posts, captions, reels, and story ideas.</p>
                 </div>
-                <img src="assets/images/content-creation.jpg" alt="Content planning" class="service-image">
+                <img src="assets/images/content-creation.png" alt="Content planning" class="service-image">
             </div>
 
             <!-- Branding -->
@@ -107,12 +107,12 @@
                     <h3 class="service-title">Branding</h3>
                     <p class="service-description">Logos, visual identity and brand voice.</p>
                 </div>
-                <img src="assets/images/branding.jpg" alt="Team branding session" class="service-image">
+                <img src="assets/images/branding.png" alt="Team branding session" class="service-image">
             </div>
 
             <!-- Financial Plans -->
             <div class="service-card">
-                <img src="assets/images/financial-plans.jpg" alt="Financial planning" class="service-image">
+                <img src="assets/images/financial-plans.png" alt="Financial planning" class="service-image">
                 <div class="service-content">
                     <h3 class="service-title">Financial Plans</h3>
                     <p class="service-description">Pricing strategies, budgeting, and break-even calculators.</p>
@@ -121,7 +121,7 @@
 
             <!-- Photoshoots -->
             <div class="service-card">
-                <img src="assets/images/photoshoots.jpg" alt="Photography studio" class="service-image">
+                <img src="assets/images/photoshoots.png" alt="Photography studio" class="service-image">
                 <div class="service-content">
                     <h3 class="service-title">Photoshoots</h3>
                     <p class="service-description">Professional product and lifestyle shoots.</p>
@@ -134,7 +134,7 @@
                     <h3 class="service-title">Models</h3>
                     <p class="service-description">Connecting you with the right talent to represent your brand authentically.</p>
                 </div>
-                <img src="assets/images/models.jpg" alt="Models" class="service-image">
+                <img src="assets/images/models.png" alt="Models" class="service-image">
             </div>
         </div>
     </section>
