--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
+        <!-- About Section -->
     <section class="about-section" id="about">
         <div class="about-container">
             <div class="about-content">
@@ -226,18 +226,28 @@
         </div>
     </div>
 </footer>
-
-
-    <script>
+<script>
         document.addEventListener("DOMContentLoaded", () => {
-            const processSection = document.querySelector(".process-section");
+            // Select all sections we want to observe for animations
+            const sectionsToObserve = document.querySelectorAll(
+                '.hero-section, .about-section, .mission-vision-section, .services-section, .process-section, .why-mtm-section, .footer-section, .logo-scroll-container'
+            );
 
-            if (!processSection) return;
+            if (sectionsToObserve.length === 0) return;
 
             const observerOptions = {
                 root: null,
-                rootMargin: '0px',
-                threshold: 0.3
+                
+                /* THIS IS THE CHANGE:
+                  '0px 0px -250px 0px' means:
+                  Top: 0px
+                  Right: 0px
+                  Bottom: -250px (Shrinks the viewport detection area by 250px from the bottom)
+                  Left: 0px
+                */
+                rootMargin: '0px 0px -250px 0px', 
+                
+                threshold: 0.1 // Triggers when 10% of the section is visible INSIDE the new, smaller area
             };
 
             const observerCallback = (entries, observer) => {
@@ -250,7 +260,9 @@
             };
 
             const observer = new IntersectionObserver(observerCallback, observerOptions);
-            observer.observe(processSection);
+            sectionsToObserve.forEach(section => {
+                observer.observe(section);
+            });
         });
     </script>
 </body>
