Fix Our Work Responsive Design

--- a/our_work.html
+++ b/our_work.html
@@ -217,7 +217,7 @@
             <!-- Project Title -->
             <div class="project-title fashion-title" data-animation="fade-in">
                 <h1>Fashion</h1>
-                <span>Uchaf</span>
+                <span>Frames</span>
             </div>
 
         </div>
